force-app/main/default/objects/openq__Event__c/openq__Event__c.object-meta.xml
<CustomObject>
    <description>Events Record Information.</description>
    <label>Event</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>