force-app/main/default/objects/openq__Event__c/fields/Event_Management_Company__c.field-meta.xml
<CustomField>
    <fullName>Event_Management_Company__c</fullName>
    <description>Who illumina hires to manage event</description>
    <label>Event Management Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OM&amp;E</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Illumina Event Marketing</fullName>
            </value>
            <value>
                <fullName>Ashfield</fullName>
            </value>
            <value>
                <fullName>TTA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>