force-app/main/default/objects/openq__Event__c/fields/openq__Country__c.field-meta.xml
<CustomField>
    <fullName>openq__Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>