force-app/main/default/objects/openq__Event__c/fields/openq__Currency_Test__c.field-meta.xml
<CustomField>
    <fullName>openq__Currency_Test__c</fullName>
    <label>Currency Test</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>