force-app/main/default/objects/openq__Event__c/fields/openq__Description__c.field-meta.xml
<CustomField>
    <fullName>openq__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>