force-app/main/default/objects/openq__Event__c/fields/openq__End_Date__c.field-meta.xml
<CustomField>
    <fullName>openq__End_Date__c</fullName>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>