force-app/main/default/objects/openq__Event__c/fields/openq__End_Time__c.field-meta.xml
<CustomField>
    <fullName>openq__End_Time__c</fullName>
    <label>End Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>