force-app/main/default/objects/openq__Event__c/fields/openq__Product__c.field-meta.xml
<CustomField>
    <fullName>openq__Product__c</fullName>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-product specific</fullName>
            </value>
            <value>
                <fullName>Verifi TSO</fullName>
            </value>
            <value>
                <fullName>NIPT in-lab solution</fullName>
            </value>
            <value>
                <fullName>TST170</fullName>
            </value>
            <value>
                <fullName>TST500+ Tissue</fullName>
            </value>
            <value>
                <fullName>TST500+ Plasma</fullName>
            </value>
            <value>
                <fullName>TS ctDNA kit</fullName>
            </value>
            <value>
                <fullName>Exome</fullName>
            </value>
            <value>
                <fullName>WGS</fullName>
            </value>
            <value>
                <fullName>TruSight One</fullName>
            </value>
            <value>
                <fullName>TruSight Cardio</fullName>
            </value>
            <value>
                <fullName>Cystic Fibrosis</fullName>
            </value>
            <value>
                <fullName>WGS/WES</fullName>
            </value>
            <value>
                <fullName>HumanCytoSNP-12</fullName>
            </value>
            <value>
                <fullName>CytoSNP-850K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>