force-app/main/default/objects/openq__Event__c/fields/openq__Therapy__c.field-meta.xml
<CustomField>
    <fullName>openq__Therapy__c</fullName>
    <label>Therapy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Therapy 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>