force-app/main/default/objects/openq__Event__c/fields/openq__Type__c.field-meta.xml
<CustomField>
    <fullName>openq__Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Congress</fullName>
            </value>
            <value>
                <fullName>Speaker Forum</fullName>
            </value>
            <value>
                <fullName>Advisory Board</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>R &amp; D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>