force-app/main/default/objects/openq__Event__c/fields/Related_Plan__c.field-meta.xml
<CustomField>
    <fullName>Related_Plan__c</fullName>
    <description>Related plan</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Plan</label>
    <referenceTo>openq__Engagement_Plan__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>