force-app/main/default/objects/openq__Event__c/recordTypes/openq__Test_1.recordType-meta.xml
<RecordType>
    <fullName>openq__Test_1</fullName>
    <active>true</active>
    <label>Normal</label>
</RecordType>