force-app/main/default/objects/openq__Event__c/validationRules/openq__Start_Date_cant_be_after_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>openq__Start_Date_cant_be_after_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>openq__Start_Date__c &gt;  openq__End_Date__c</errorConditionFormula>
    <errorMessage>Start Date cannot be after End Date</errorMessage>
</ValidationRule>