force-app/main/default/objects/openq__Event__c/listViews/openq__All.listView-meta.xml
<ListView>
    <fullName>openq__All</fullName>
    <columns>NAME</columns>
    <columns>openq__Name__c</columns>
    <columns>openq__Start_Date__c</columns>
    <columns>openq__Start_Time__c</columns>
    <columns>openq__End_Date__c</columns>
    <columns>openq__End_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>